vtn: OpTypeStruct in kernel parameters trigger assertion in glsl_types.h
After years of breaking everyone else's drivers, it was only a matter of time until I broke Mesa.
During SPIR-V parsing, kernels that have an OpTypeVector
parameter trigger an assert (something something my struct is not a base type, see stack trace). This isn't reproducible with Clang afaiu because it instead it emits pointer to structs, always.
System information
Latest Mesa main
(0c77469995be4dd7ef7694de7eeba640dd55809e
), broken on 24.2 which is what I daily-drive.
Running rusticl w/ radeonsi (but it's seemingly not hw-specific)
System:
Host: gob-X570-AORUS-ULTRA Kernel: 6.8.0-45-generic arch: x86_64 bits: 64
compiler: gcc v: 13.2.0
Desktop: GNOME v: 46.0 tk: GTK v: 3.24.41 wm: gnome-shell dm: GDM3
Distro: Ubuntu 24.04.1 LTS (Noble Numbat)
CPU:
Info: 16-core model: AMD Ryzen 9 5950X bits: 64 type: MT MCP arch: Zen 3+
rev: 0 cache: L1: 1024 KiB L2: 8 MiB L3: 64 MiB
Speed (MHz): avg: 2367 high: 3400 min/max: 2200/5083 boost: enabled cores:
1: 2200 2: 2880 3: 2200 4: 2200 5: 2200 6: 2200 7: 2200 8: 2200 9: 2200
10: 2200 11: 2200 12: 2200 13: 2200 14: 2880 15: 2200 16: 2200 17: 3100
18: 2200 19: 2200 20: 2200 21: 2200 22: 2890 23: 2200 24: 3400 25: 2200
26: 2200 27: 3400 28: 2200 29: 2200 30: 2200 31: 2200 32: 2200
bogomips: 217587
Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
Device-1: Intel DG2 [Arc A770] driver: i915 v: kernel arch: Gen-12.7 pcie:
speed: 2.5 GT/s lanes: 1 ports: active: DP-3 empty: DP-1, DP-2, DP-4,
HDMI-A-1, HDMI-A-2, HDMI-A-3 bus-ID: 0b:00.0 chip-ID: 8086:56a0
Device-2: AMD Ellesmere [Radeon RX 470/480/570/570X/580/580X/590]
vendor: Micro-Star MSI driver: amdgpu v: kernel arch: GCN-4 pcie:
speed: 8 GT/s lanes: 8 ports: active: DP-7 empty: DP-5, DP-6, DVI-D-1,
HDMI-A-4 bus-ID: 0d:00.0 chip-ID: 1002:67df temp: 54.0 C
Display: wayland server: X.org v: 1.21.1.11 with: Xwayland v: 23.2.6
compositor: gnome-shell driver: X: loaded: amdgpu,nvidia
unloaded: fbdev,modesetting,nouveau,radeon,vesa dri: radeonsi
gpu: amdgpu,i915 display-ID: 0
Monitor-1: DP-3 model: LG (GoldStar) HDR 4K res: 3840x2160 dpi: 163
diag: 690mm (27.2")
Monitor-2: DP-7 model: LG (GoldStar) HDR 4K res: 3840x2160 dpi: 163
diag: 690mm (27.2")
API: EGL v: 1.5 platforms: device: 0 drv: iris device: 1 drv: radeonsi
device: 2 drv: swrast surfaceless: drv: iris wayland: drv: iris x11:
drv: iris inactive: gbm
API: OpenGL v: 4.6 compat-v: 4.5 vendor: intel mesa v: 24.0.9-0ubuntu0.2
glx-v: 1.4 direct-render: yes renderer: Mesa Intel Arc A770 Graphics (DG2)
device-ID: 8086:56a0 display-ID: :0.0
API: Vulkan v: 1.3.275 surfaces: xcb,xlib,wayland device: 0
type: discrete-gpu driver: N/A device-ID: 8086:56a0 device: 1
type: discrete-gpu driver: N/A device-ID: 1002:67df device: 2 type: cpu
driver: N/A device-ID: 10005:0000